--- a/package.json
+++ b/package.json
@@ -43,6 +43,6 @@
     "typescript": "^4.8.4"
   },
   "lint-staged": {
-    "*.js": "eslint --cache --fix"
+    "*.ts": "eslint --cache --fix"
   }
 }
