--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
   },
   "homepage": "https://github.com/Aravin/express-typescript-linting-scaffolding#readme",
   "dependencies": {
+    "@aws-sdk/client-cloudwatch-logs": "^3.204.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
-    "winston": "^3.8.2"
+    "winston": "^3.8.2",
+    "winston-cloudwatch": "^6.1.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
